# FEREBUS-v7

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.f90
cmake/Modules/: BuildFlags.cmake  SetParallelizationLibrary.cmake  SetUpLAPACK.cmake
examples/AMMONIA/: AMMONIA_N1_TRAINING_SET.csv  ferebus.toml
examples/GLYCINE/: GLYCINE_C1_TRAINING_SET.csv  ferebus.toml
examples/IBUPROFEN/: ferebus.toml
examples/METHANOL/: METHANOL_C1_TRAINING_SET.csv  ferebus.toml
examples/NMA/: NMA_C1_TRAINING_SET.csv  ferebus.toml
examples/WATER/: WATER_H2_TRAINING_SET.csv  WATER_H3_TRAINING_SET.csv  WATER_O1_TRAINING_SET.csv  ferebus.toml
src/: CMakeLists.txt  command_line.f90  constants.f90  csv.f90  error_module.f90  kernels.f90  kinds.f90  model.f90  utils.f90  writable.f90
src/config/: CMakeLists.txt  config_module.f90  config_type.f90  error.f90  model_config.f90  notes.f90  toml.f90
src/config/kernel/: CMakeLists.txt  kernel_config.f90  kernel_list.f90  kernel_type_config.f90  linear.f90  periodic.f90  rbf.f90  rbf_cyclic.f90  stationary_kernel.f90
src/config/mean/: CMakeLists.txt  constant.f90  linear.f90  mean.f90  quadratic.f90  zero.f90
src/config/optimiser/: CMakeLists.txt  optimiser.f90
src/config/optimiser/pso/: CMakeLists.txt  parameter_updater.f90  pso.f90  stopping_criteria.f90  swarm_updater.f90
src/config/system/: CMakeLists.txt  alf.f90  atom.f90  property.f90  system.f90
src/data/: CMakeLists.txt  data_input.f90  data_output.f90  data_set.f90  data_set_type.f90  data_sets_type.f90  standardised_data_set.f90  units.f90
src/interpreter/: CMakeLists.txt  ast.f90  kernel_interpreter.f90  lexer.f90  parser.f90  token.f90  token_type.f90
src/kernels/: CMakeLists.txt  constant.f90  distance_matrix.f90  kernel_module.f90  linear_kernel.f90  m52_kernel.f90  periodic_kernel.f90  rbf_cyclic_kernel.f90  rbf_kernel.f90  stationary_cyclic_kernel.f90  stationary_kernel.f90
src/mean/: CMakeLists.txt  constant.f90  least_squares.f90  linear.f90  module.f90  quadratic.f90  type.f90  zero.f90
src/model/: CMakeLists.txt  model_module.f90
src/model/gpr/: CMakeLists.txt  gpr.f90  likelihood.cuf  likelihood.f90
src/optimiser/: CMakeLists.txt  iter_result.f90  iter_state.f90  optimiser_module.f90  optimiser_type.f90
src/optimiser/learning_automata/: CMakeLists.txt  automata_value.f90  learning_automata.f90
src/optimiser/pso/: CMakeLists.txt  particle.f90  pso.f90
src/utils/: CMakeLists.txt  arith.f90  array.f90  linalg.f90  mpi.f90  rand.f90  str.f90  time.f90  toml.f90
subprojects/: CMakeLists.txt
